Finalized multiplier-accelerator calculations and begun write-up

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -91,6 +91,8 @@ articletitle
 \tableofcontents
 \chapter{Introduction}
 \input{chapters/introduction}
+\chapter{The Multiplier-Accelerator Model}
+\input{chapters/multiplier-accelerator}
 \chapter{Conclusion}
 \input{chapters/conclusion}
 \chapter{References}
