Begun write up on metzlerian model

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -50,6 +50,7 @@ articletitle
 	\bfseries
 	\begin{tabular}[#1]{@{}l@{}}#2\end{tabular}%
 }
+\usepackage{chemformula}
 
 %Lorem Ipsum%
 \usepackage{lipsum}
@@ -91,8 +92,8 @@ articletitle
 \tableofcontents
 \chapter{Introduction}
 \input{chapters/introduction}
-\chapter{The Multiplier-Accelerator Model}
-\input{chapters/multiplier-accelerator}
+\chapter{Metzlerian Business Cycles}
+\input{chapters/metzlerian_basic}
 \chapter{Conclusion}
 \input{chapters/conclusion}
 \chapter{References}
