--- a/metzlerian/basic/model_description.tex
+++ b/metzlerian/basic/model_description.tex
@@ -41,7 +41,8 @@
 \setlength{\droptitle}{-1 in}
 
 \begin{document}
-\section*{Set-Up}
+\section{Base Model}
+\subsection*{Set-Up}
 \begin{equation*}
     Y_t=I_t+S_t+U_t
 \end{equation*}
@@ -67,7 +68,7 @@ $0<b<1$ is the aggregate marginal propensity to consume.
 
 Producers must thus predict consumption behavior. This model uses 2 different expectation formation rules that they can switch between: $U_t^E$ and $U_t^R$. The first strategy involved the firms attempting to extrapolate future consumption:
 \begin{equation*}
-	U+t^E=C_{t-1}+c(C_{t-1}-\bar C)
+	U_t^E=C_{t-1}+c(C_{t-1}-\bar C)
 \end{equation*}
 such that $\bar C$ is the equilibrium level of consumption and $0\leq c$ is a measure of speed of expected deviation from equilibrium.
 
@@ -86,7 +87,7 @@ The distribution is determined by the weight in the time period:
 	w_t=\frac{1}{1+d(\bar C-C_{t-1})^2}
 \end{equation*}
 Intuitively, the farther from equilibrium the current state, the more producers will believe that production will shift back towards equilibrium. Likewise, at equilibrium, firms will choose to extrapolate. $d$ indicates the popularity of extrapolation. 
-\section*{Model}
+\subsection*{Model}
 Combining equations gives the function for income:
 \begin{equation*}
 	Y_t=U_t+kU_t-(1+k)U_{t-1}+C_{t-1}+\bar I
@@ -99,8 +100,38 @@ which is analogous to the Keynesian multiplier solution. By parameter restrictio
 \begin{equation*}
 	1-b(1+c)(1+k)>0
 \end{equation*}
-\section*{Possible Expansions}
+\subsection*{List of Equations}
+	\begin{gather*}
+		Y_t=\bar I+S_t+U_t\\
+		S_t=\hat Q_t-Q_{t-1}\\
+		\hat Q_t=k U_t\\
+		Q_{t-1}=\hat Q_{t-1}-(C_{t-1}-U_{t-1})\\
+		U_t^E=C_{t-1}+c(C_{t-1}-\bar C)\\
+		U_t^R=C_{t-1}+f(\bar C-C_{t-1})\\
+		U_t=w_tU_t^E+(1-w_t)U_t^R\\
+		w_t=\frac{1}{1+d(\bar C-C_{t-1})^2}\\
+		Y_t=U_t+kU_t-(1+k)U_{t-1}+C_{t-1}+\bar I
+	\end{gather*}
+\subsection*{Possible Expansions}
 This model is similar in terms of economic scope to the multiplier-accelerator model in that it only takes into account consumption and investment. Government expenditures and taxes can be incorporated into the model in order to incorporate fiscal policy. The investment goods condition can also be relaxed and allowed to vary, perhaps via a system similar to the Solow growth model. This would allow for a naive incorporation of monetary policy via control of interest rates; however, this may introduce theoretical complications due to the debate on the effect of nominal interest rates on real interest rates.
 
 The key aspect of the model given by producer expectations can also be expanded to allow for other possible game strategies or to incorporate learning into the model. 
+\pagebreak
+\section{Expanded with Cobb-Douglas Production}
+	Based on the Metzlerian model previously explained. This alternative model attempts to provide endogenous change to investment in addition to the pre-existing endogenous inventory change by way of a Cobb-Douglas production taking capital as input similar to a Solow model. Labor is allowed to grow exogenously for the model to experience growth in output.
+\subsection*{Mathematical Setup}
+\begin{gather*}
+	Y_t = I_t + U_t + S_t\\
+	Y_t = K_t^\alpha L_t^{1-\alpha}\\
+	L_t = (1+n) L_{t-1}\\
+	K_t = I_{t-1} + (1-\delta) K_{t-1}\\
+	C_t = cY_t\\
+	S_t=\hat Q_t-Q_{t-1}\\
+	\hat Q_t=k U_t\\
+	Q_{t-1}=\hat Q_{t-1}-(C_{t-1}-U_{t-1})\\
+	U_t^E=C_{t-1}+c(C_{t-1}-\bar C)\\
+	U_t^R=C_{t-1}+f(\bar C-C_{t-1})\\
+	U_t=w_tU_t^E+(1-w_t)U_t^R\\
+	w_t=\frac{1}{1+d(\bar C-C_{t-1})^2}\\
+\end{gather*}
 \end{document}
