--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -84,7 +84,7 @@ style=chem-acs
 		\begin{column}{0.5\textwidth}
 			\begin{figure}
 				\centering
-				\includegraphics[width=\textwidth]{logistic.pdf}
+				\includegraphics[width=\textwidth]{logistic.eps}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -127,7 +127,7 @@ style=chem-acs
 		\begin{column}{0.5\textwidth}
 			\begin{figure}
 				\centering
-				\includegraphics[width=\textwidth]{investment_curve.pdf}
+				\includegraphics[width=\textwidth]{investment_curve.eps}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -235,7 +235,7 @@ style=chem-acs
 \begin{frame}{Fixed Point Stability}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.9\textheight]{fixed_point.pdf}
+		\includegraphics[height=0.9\textheight]{fixed_point.eps}
 	\end{figure}
 \end{frame}
 
@@ -244,13 +244,13 @@ style=chem-acs
 		\begin{column}{0.5\textwidth}
 			\begin{figure}
 				\centering
-				\includegraphics[height=0.8\textwidth,width=0.8\textwidth]{2_cycle.pdf}
+				\includegraphics[height=0.8\textwidth,width=0.8\textwidth]{2_cycle.eps}
 			\end{figure}
 		\end{column}
 		\begin{column}{0.5\textwidth}
 			\begin{figure}
 				\centering
-				\includegraphics[height=0.8\textwidth,width=0.8\textwidth]{8_cycle.pdf}
+				\includegraphics[height=0.8\textwidth,width=0.8\textwidth]{8_cycle.eps}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -273,7 +273,7 @@ style=chem-acs
 		\begin{column}{0.5\textwidth}
 			\begin{figure}
 				\centering
-				\includegraphics[width=\textwidth]{contained_chaos.pdf}
+				\includegraphics[width=\textwidth]{contained_chaos.eps}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -299,7 +299,7 @@ style=chem-acs
 		\begin{column}{0.5\textwidth}
 			\begin{figure}
 				\centering
-				\includegraphics[width=\textwidth]{spillover_chaos.pdf}
+				\includegraphics[width=\textwidth]{spillover_chaos.eps}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -313,7 +313,7 @@ style=chem-acs
 		\begin{column}{0.5\textwidth}
 			\begin{figure}
 				\centering
-				\includegraphics[width=\textwidth]{spillover_cycle.pdf}
+				\includegraphics[width=\textwidth]{spillover_cycle.eps}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -334,7 +334,7 @@ style=chem-acs
 		\begin{column}{0.5\textwidth}
 			\begin{figure}
 				\centering
-				\includegraphics[height=0.9\textheight]{exploding.pdf}
+				\includegraphics[height=0.9\textheight]{exploding.eps}
 			\end{figure}
 		\end{column}
 	\end{columns}
@@ -355,11 +355,11 @@ style=chem-acs
 		\begin{column}{0.5\textwidth}
 			\begin{figure}
 				\centering
-				\includegraphics[height=0.4\textheight]{bifurcation.pdf}
+				\includegraphics[height=0.4\textheight]{bifurcation.eps}
 			\end{figure}
 			\begin{figure}
 				\centering
-				\includegraphics[height=0.3\textheight]{lyapunov.pdf}
+				\includegraphics[height=0.3\textheight]{lyapunov.eps}
 			\end{figure}
 		\end{column}
 	\end{columns}
