Changed predictive mechanism to a third-order average

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -37,7 +37,7 @@ articletitle
 %Image Formatting%
 \usepackage{graphicx}%Enchanced graphics support%
 \usepackage{float}%Float options$
-\graphicspath{{./manuscript/figures/}}
+\graphicspath{{./figures/}}
 
 %Math Formatting%
 \usepackage{amsmath}%AMS Math%
