Developed parameter-focused bifurcation diagrams for growth

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -18,7 +18,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhead{}
-\fancyhead[RO,LE]{Thesis Title}
+\fancyhead[RO,LE]{}
 \fancyhead[RE,LO]{Chapter \thechapter}
 \fancyhead[C]{}
 \fancyfoot{}
@@ -62,7 +62,7 @@ articletitle
 \begin{titlepage}
 	\begin{center}
 		\vspace*{1.5 cm}
-		\textbf{\{Working Title\}}
+		\textbf{Application of Mathematical Methods in the Study of Chemical Dynamical Systems to an Inventory Multiplier-Acclerator Model}
 
 
 		\vspace{1.5 cm}
