Completed parameter bifurcation analysis

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -65,7 +65,7 @@ articletitle
 \begin{titlepage}
 	\begin{center}
 		\vspace*{1.5 cm}
-		\textbf{Application of Mathematical Methods in the Study of Chemical Dynamical Systems to an Inventory Multiplier-Acclerator Model}
+		\textbf{Application of Mathematical Methods in the Study of Chemical Dynamical Systems to an Inventory Multiplier-Accelerator Model}
 
 
 		\vspace{1.5 cm}
@@ -111,7 +111,7 @@ articletitle
 \input{chapters/appendix_comp-logistic}
 \chapter{Computational Analysis of the Metzlerian Inventory Cycle Model with Heterogenous Expectation Rules}
 \input{chapters/appendix_comp-metzlerian}
-\chapter{Computational Analysis of the Metlerian Inventory Cycle Model with Averaged Expectations, Endogenous Investment, and Consumption Lag}
+\chapter{Computational Analysis of the Metzlerian Inventory Cycle Model with Averaged Expectations, Endogenous Investment, and Consumption Lag}
 \input{chapters/appendix_comp-metzlerian_growth}	
 \end{appendices}
 \end{document}
