Created chapter about multiplier-accelerator model

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -32,7 +32,7 @@ backend=biber,
 style=chem-acs,
 articletitle
 ]{biblatex}
-\addbibresource{references.bib}
+\addbibresource{./references.bib}
 
 %Image Formatting%
 \usepackage{graphicx}%Enchanced graphics support%
@@ -65,7 +65,7 @@ articletitle
 \begin{titlepage}
 	\begin{center}
 		\vspace*{1.5 cm}
-		\textbf{Application of Mathematical Methods in the Study of Chemical Dynamical Systems to an Inventory Multiplier-Accelerator Model}
+		\textbf{Application of Mathematical Methods in the Study of Chemical Dynamical Systems to an Inventory Multiplier-Accelerator Business Cycle Model}
 
 
 		\vspace{1.5 cm}
@@ -73,7 +73,7 @@ articletitle
 		by\\ Benjamin Bui
 		\vspace{1.5 cm}
 
-		Professor Peacock-Lopez, Advisor
+		Professor Peacock-L\'opez, Advisor
 		\vspace{1.5 cm}
 
 		A thesis submitted in partial fulfillment\\
@@ -96,6 +96,8 @@ articletitle
 \tableofcontents
 \chapter{Introduction}
 \input{chapters/introduction}
+\chapter{Multiplier-Acclerator Business Cycles by T\"{o}nu Puu}\label{ch:multiplier-accelerator}
+\input{chapters/multiplier-accelerator}
 \chapter{Heterogenous Inventory Cycles by Westerhoff et al.}
 \input{chapters/metzlerian_basic}
 \chapter{Inventory Cycles with Averaged Expectations, Endogenous Investment, and Consumption Lag}
@@ -109,6 +111,8 @@ articletitle
 \input{chapters/appendix_growth}
 \chapter{Computational Analysis of the Logistic Map}
 \input{chapters/appendix_comp-logistic}
+\chapter{Computational Analysis of the Multiplier-Accelerator Model}
+\input{chapters/appendix_comp-multiplier_accelerator}
 \chapter{Computational Analysis of the Metzlerian Inventory Cycle Model with Heterogenous Expectation Rules}
 \input{chapters/appendix_comp-metzlerian}
 \chapter{Computational Analysis of the Metzlerian Inventory Cycle Model with Averaged Expectations, Endogenous Investment, and Consumption Lag}
