--- a/metzlerian/expanded/model_description.tex
+++ b/metzlerian/expanded/model_description.tex
@@ -52,7 +52,7 @@ Income is made up of the same components as cited in Westerhoff's model, product
 	Q_{t-1}=\hat Q_{t-1}-(C_{t-1}-U_{t-1})
 \end{gather}
 Firms use inventory to accommodate differences between actual consumption and predicted consumption. The desired level of inventory $\hat Q_t$ is assumed to be in proportion to expected levels of consumption, $U_t$. The actual level of inventory can thus be determined to be the difference between the expected level produced explicitly for inventory in addition to unexpected changes in inventory as a result of overproduction or underproduction of goods for consumption.
-\section*{From Tonu Puu's Multiplier Acclerator Model}
+\section*{From T\"{o}nu Puu's Multiplier Acclerator Model}
 \begin{equation}
 	I_t=v(Y_{t-1}-Y_{t-2})-v(Y_{t-1}-Y_{t-2})^3
 \end{equation}
